--- a/Business webpage/contactus.html
+++ b/Business webpage/contactus.html
@@ -26,10 +26,14 @@
       <input type="submit" value="Send">
     </form>
     <footer>
+      <iframe 
+      src="https://www.google.com/maps?q=Chennai+food+truck&output=embed"
+      width="400" height="300" style="border:0;">
+    </iframe>
+     <h3>Find Us Here!</h3>
     <p>&copy; 2025 Street Bites Food Truck</p>
-  </footer>
 
-    <h3>Find Us Here!</h3>
+  </footer>
 
 </body>
 </html>
