--- a/Business webpage/service.html
+++ b/Business webpage/service.html
@@ -15,7 +15,7 @@
         <a href="Contactus.html">Contact us</a> |
     </nav>
     <h2>Popular Dishes</h2>
-    <table border="2">
+    <center><table border="2">
         <tbody>
    <marquee direction="right" behavior="slide"><img align="center" src="/img task/assest/snks.jpg" height="300" width="300"><img  align="center" src= "assest/food.jpg"  height="300" width="300"><img align="center" src="/img task/assest/taco.jpg" height="300" width="300"><img align="center" src="/img task/assest/sandwich.jpg" height="300" width="300"></marquee></table></tbody>
    <table border="2" cellspacing="7" cellpadding="7">
@@ -39,6 +39,7 @@
         <td>Three soft tacos filled with spicy chicken</td>
         <td>300 rs</td>
       </tr>
+      </center>
     
 </body>
 </html>
